--- a/src/assets/scss/partials/variables.scss
+++ b/src/assets/scss/partials/variables.scss
@@ -1,3 +1,7 @@
 /*******************
      VARIABLES
 ******************/
+$main-container: 1200px;
+$header-bg: white;
+$main-gb: #1C1C1C;
+$main-txt: white;
