--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -4,6 +4,7 @@
 
 header {
     background-color: $header-bg;
+    padding: 20px 0;
 
     .container {
         max-width: $main-container;
@@ -27,5 +28,37 @@ main {
         max-width: $main-container;
         margin: auto;
         padding: 50px 0;
+    }
+}
+
+section {
+    background-color: $nav-bg;
+
+    nav {
+        max-width: $main-container;
+        margin: auto;
+        padding: 50px 20px;
+    }
+
+    ul {
+        display: flex;
+        justify-content: space-between;
+        list-style: none;
+    }
+
+    .buy {
+        width: 75px;
+        height: 75px;
+    }
+
+    a {
+        display: flex;
+        align-items: center;
+    }
+
+    .buy > img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
     }
 }
