--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -54,6 +54,8 @@ section {
     a {
         display: flex;
         align-items: center;
+        text-decoration: none;
+        color: $main-txt;
     }
 
     .buy > img {
@@ -72,7 +74,6 @@ footer {
         margin: auto;
         display: flex;
         justify-content: space-between;
-        padding: 50px 0;
     }
 
     h3 {
@@ -83,11 +84,21 @@ footer {
 
     li {
         margin-bottom: 5px;
+    }
+
+    li > a {
         color: $links-cl;
+        text-decoration: none;
+    }
+
+    li > a:hover {
+        color: $main-txt;
+        text-decoration: underline $main-txt;
     }
 
     .links {
         display: flex;
+        padding: 30px 0;
     }
 
     .links ul {
@@ -96,5 +107,12 @@ footer {
 
     .col-1, .col-2, .col-3 {
         margin-right: 20px;
+    }
+
+    .big-logo {
+        width: 40%;
+        background-size: cover;
+        background-position: center;
+        background-image: url('/src/assets/img/dc-logo-bg.png');
     }
 }
