--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -2,9 +2,13 @@
 @use "partials/variables" as *;
 @use "partials/mixins" as *;
 
+body {
+    margin: 0;
+}
+
 header {
     background-color: $header-bg;
-    padding: 20px 0;
+    padding: 12px 0;
 
     .container {
         max-width: $main-container;
@@ -16,9 +20,20 @@ header {
         nav ul > * {
             display: inline-block;
         }
+
+        li > a {
+            text-decoration: none;
+            color: #1C1C1C;
+            font-weight: bold;
+            padding: 50px 10px;
+        }
+
+        li > a:hover {
+            border-bottom: 5px solid #0282F9;
+            color: #0282F9;
+        }
     }    
 }
-
 
 main {
     background-color: $main-gb;
@@ -27,7 +42,7 @@ main {
     .container {
         max-width: $main-container;
         margin: auto;
-        padding: 50px 0;
+        padding: 57px 0;
     }
 }
 
@@ -47,8 +62,8 @@ section {
     }
 
     .buy {
-        width: 75px;
-        height: 75px;
+        width: 60px;
+        height: 60px;
     }
 
     a {
@@ -98,7 +113,7 @@ footer {
 
     .links {
         display: flex;
-        padding: 30px 0;
+        padding: 20px 0;
     }
 
     .links ul {
@@ -114,5 +129,44 @@ footer {
         background-size: cover;
         background-position: center;
         background-image: url('/src/assets/img/dc-logo-bg.png');
+    }
+
+}
+
+.footer-bottom {
+    background-color: #2F2F2F;
+    padding: 50px 0;
+
+    .container {
+        width: $main-container;
+        margin: auto;
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .sign > a {
+        text-decoration: none;
+        color: $main-txt;
+        border: 2px solid #0282F9;
+        padding: 20px;
+        font-weight: bold;
+    }
+
+    .follow {
+        display: flex;
+        align-items: center;
+    }
+
+    .follow h3 {
+        color: #0282F9;
+    }
+
+    ul {
+        display: flex;
+        list-style: none;
+    }
+
+    ul > li {
+        margin-left: 15px;
     }
 }
